Enhance settings and email account management
- Updated .env.example to include new environment variables for encryption and Google client credentials.
- Refactored SettingsPage to integrate EmailAccountsSection, allowing users to manage their email accounts directly within settings.
- Renamed "Development Settings" to "Email Settings" in SequenceEmailSettings for better clarity.
- Added EmailAccount and EmailAlias models to the Prisma schema, enabling structured management of user email accounts and aliases.

These changes improve the user experience by providing better organization and management of email settings within the application.

--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -13,6 +13,7 @@ NEXT_PUBLIC_MAILOPS_API_URL="http://localhost:3001/api"
 # Secrets
 NEXTAUTH_SECRET=
 APOLLO_API_KEY=
+ENCRYPTION_KEY=
 
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
@@ -21,3 +22,6 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
+
+GOOGLE_CLIENT_ID_EMAIL=
+GOOGLE_CLIENT_SECRET_EMAIL=
