Refactor email account management and remove obsolete components
- Updated .env.example to include new Google Mailbox OAuth2 credentials for improved email account integration.
- Deleted unused API routes and components related to email accounts, streamlining the codebase and enhancing maintainability.
- Refactored the Mailbox model in the database schema to improve alias management and ensure consistent terminology.
- Updated the Mailboxes settings page to utilize the new MailboxesSection component, enhancing user experience in managing email accounts.

These changes improve the clarity and organization of email account management, providing a more intuitive user experience.

--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -18,10 +18,12 @@ ENCRYPTION_KEY=
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
 
-# Google
+# Google OAuth2
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
 
+# Google Mailbox OAuth2
 GOOGLE_CLIENT_ID_EMAIL=
 GOOGLE_CLIENT_SECRET_EMAIL=
+GOOGLE_REDIRECT_URI_EMAIL=
