--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -34,7 +34,8 @@
                 "NEXTAUTH_SECRET",
                 "APOLLO_API_KEY",
                 "DATABASE_URL",
-                "GOOGLE_*"
+                "GOOGLE_*",
+                "ENCRYPTION_KEY"
             ],
             "inputs": [
                 "$TURBO_DEFAULT$",
@@ -55,7 +56,8 @@
                 "NEXTAUTH_SECRET",
                 "APOLLO_API_KEY",
                 "DATABASE_URL",
-                "GOOGLE_*"
+                "GOOGLE_*",
+                "ENCRYPTION_KEY"
             ],
             "inputs": [
                 "$TURBO_DEFAULT$",
@@ -71,7 +73,8 @@
                 "NEXTAUTH_SECRET",
                 "APOLLO_API_KEY",
                 "DATABASE_URL",
-                "GOOGLE_*"
+                "GOOGLE_*",
+                "ENCRYPTION_KEY"
             ],
             "inputs": [
                 "$TURBO_DEFAULT$",
