--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -75,6 +75,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.3",
     "react-resizable-panels": "^2.1.6",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.0",
