--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,10 +16,9 @@
     "node": ">=20"
   },
   "dependencies": {
-    "@auth/core": "^0.37.3",
-    "@auth/prisma-adapter": "^2.7.3",
+    "@auth/prisma-adapter": "^2.7.4",
     "@coldjot/database": "*",
-    "@hello-pangea/dnd": "^17.0.0",
+    "@hello-pangea/dnd": "^18.0.0-beta.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -40,7 +39,6 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.3",
-    "@tanstack/react-table": "^8.20.5",
     "@tiptap/extension-link": "^2.9.1",
     "@tiptap/extension-placeholder": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
@@ -55,7 +53,6 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "geist": "^1.3.1",
-    "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "ioredis": "^5.3.2",
     "js-base64": "^3.7.7",
@@ -63,14 +60,14 @@
     "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
-    "next": "15.1.6",
+    "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.16",
     "pino": "^8.17.0",
     "pino-pretty": "^10.3.0",
     "quoted-printable": "^1.0.1",
-    "react": "19.0.0-rc-de68d2f4-20241204",
-    "react-dom": "19.0.0-rc-de68d2f4-20241204",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.3",
@@ -89,11 +86,11 @@
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/ua-parser-js": "^0.7.39",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "^15.1.6",
     "fs-extra": "^11.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
