--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -36,7 +36,7 @@
         "./src/env.ts"
       ]
     },
-    "noImplicitAny": true
+    "noImplicitAny": false
   },
   "include": [
     "next-env.d.ts",
