--- a/apps/mailops/package.json
+++ b/apps/mailops/package.json
@@ -19,30 +19,37 @@
         "dev:debug-2": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' nodemon --watch src -e ts,json --exec \"npm run build && npm run start\""
     },
     "dependencies": {
+        "@bull-board/api": "^6.5.4",
         "@coldjot/database": "*",
         "@coldjot/types": "*",
+        "@google-cloud/pubsub": "^4.10.0",
+        "@types/jsonwebtoken": "^9.0.8",
         "@types/nodemailer": "^6.4.17",
         "bull": "^4.11.3",
+        "bullmq": "^5.34.5",
         "cors": "^2.8.5",
         "date-fns": "^2.30.0",
         "date-fns-tz": "^2.0.0",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2",
+        "exponential-backoff": "^3.1.1",
+        "express": "^4.21.2",
         "googleapis": "^126.0.1",
         "ioredis": "^5.3.2",
+        "jsonwebtoken": "^9.0.2",
+        "jwks-rsa": "^3.1.0",
         "luxon": "^3.5.0",
-        "pino": "^8.15.1",
+        "nanoid": "^5.0.9",
+        "pino": "^8.21.0",
         "pino-http": "^8.5.1",
-        "pino-pretty": "^10.2.0",
+        "pino-pretty": "^10.3.1",
         "quoted-printable": "^1.0.1",
         "sinon": "^19.0.2",
-        "@bull-board/api": "^6.5.4",
-        "bullmq": "^5.34.5"
+        "zod": "^3.24.1"
     },
     "devDependencies": {
         "@types/bull": "^4.10.0",
         "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.17",
+        "@types/express": "^4.17.21",
         "@types/luxon": "^3.4.2",
         "@types/node": "^20.6.0",
         "@types/quoted-printable": "^1.0.0",
