Improve email timeline sorting and tracking with refined event processing
- Update email timeline sorting to use latest timestamps for open and click events
- Add fallback mechanism for retrieving sent timestamp from events
- Implement consistent sorting of emails by sent date in sequence timeline route
- Enhance email tracking data transformation with more robust event handling

--- a/apps/mailops/env/.env.example
+++ b/apps/mailops/env/.env.example
@@ -31,3 +31,12 @@ GOOGLE_CLIENT_ID_EMAIL=
 GOOGLE_CLIENT_SECRET_EMAIL=
 GOOGLE_REDIRECT_URI_EMAIL=
 
+# PubSub
+GOOGLE_CLOUD_PROJECT=radiant-clone-447816-m7
+PUBSUB_SUBSCRIPTION_NAME=coldjot-subscription
+PUBSUB_TOPIC_NAME=coldjot-gmail-notification
+PUBSUB_AUDIENCE=https://cobra-electric-thoroughly.ngrok-free.app/api/pubsub
+
+# Google Service Account
+GOOGLE_SERVICE_ACCOUNT_EMAIL=
+GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=
