--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,6 +45,7 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@types/papaparse": "^5.3.15",
     "@types/quoted-printable": "^1.0.2",
     "bull": "^4.12.0",
     "class-variance-authority": "^0.7.0",
@@ -64,6 +65,7 @@
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.16",
+    "papaparse": "^5.5.2",
     "pino": "^8.17.0",
     "pino-pretty": "^10.3.0",
     "quoted-printable": "^1.0.1",
