--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,16 @@
     "@coldjot/database": "*",
     "@hello-pangea/dnd": "^18.0.0-beta.0",
     "@hookform/resolvers": "^3.10.0",
+    "@lexical/clipboard": "^0.23.1",
+    "@lexical/code": "^0.23.1",
+    "@lexical/history": "^0.23.1",
+    "@lexical/link": "^0.23.1",
+    "@lexical/list": "^0.23.1",
+    "@lexical/react": "^0.23.1",
+    "@lexical/rich-text": "^0.23.1",
+    "@lexical/selection": "^0.23.1",
+    "@lexical/table": "^0.23.1",
+    "@lexical/utils": "^0.23.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -37,6 +47,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.3",
@@ -60,6 +71,7 @@
     "js-base64": "^3.7.7",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "lexical": "^0.23.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
     "next": "^15.1.6",
