--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -77,6 +77,7 @@
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.16",
+    "openai": "^4.86.0",
     "papaparse": "^5.5.2",
     "pino": "^8.17.0",
     "pino-pretty": "^10.3.0",
