--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -65,6 +65,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.7",
     "geist": "^1.3.1",
     "googleapis": "^144.0.0",
     "ioredis": "^5.3.2",
@@ -83,7 +84,7 @@
     "pino-pretty": "^10.3.0",
     "quoted-printable": "^1.0.1",
     "react": "^19.0.0",
-    "react-day-picker": "^9.5.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
