--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,6 +58,7 @@
     "@tiptap/starter-kit": "^2.9.1",
     "@types/papaparse": "^5.3.15",
     "@types/quoted-printable": "^1.0.2",
+    "axios": "^1.8.1",
     "bull": "^4.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
