Adding documentation for development setup

--- a/apps/mailops/env/.env.example
+++ b/apps/mailops/env/.env.example
@@ -1,42 +1,41 @@
 # General Configuration
-LOG_LEVEL=debug
-APP_ENV=development
-NODE_ENV=development
-PORT=3001
-BYPASS_BUSINESS_HOURS=false
+LOG_LEVEL=debug                         # debug, info, warn, error
+APP_ENV=development                     # development, production
+NODE_ENV=development                    # development, production
+PORT=3001                               # Port for the mailops api
+BYPASS_BUSINESS_HOURS=false             # Bypass business hours check in code (for development purposes)
 
 # Urls
-WEB_APP_URL=http://localhost:3000
-MAILOPS_API_URL=http://localhost:3001
-TRACK_API_URL=https://coldjot.loca.lt
+WEB_APP_URL=http://localhost:3000       # URL for the web app
+MAILOPS_API_URL=http://localhost:3001   # URL for the mailops api
+TRACK_API_URL=https://coldjot.loca.lt   # URL for the tracking in the email
 
 # Database
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
+DATABASE_URL=                           # Database URL
 
 # Redis
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_HOST=localhost                    # Redis host
+REDIS_PORT=6379                         # Redis port
+REDIS_PASSWORD=                         # Redis password
 
 # Queue
-QUEUE_PREFIX=coldjot
-
-# Google OAuth2
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=
+QUEUE_PREFIX=coldjot # Prefix for the queue
 
 # Google Mailbox OAuth2
-GOOGLE_CLIENT_ID_EMAIL=
-GOOGLE_CLIENT_SECRET_EMAIL=
-GOOGLE_REDIRECT_URI_EMAIL=
+GOOGLE_CLIENT_ID_EMAIL=                 # Google client ID for email
+GOOGLE_CLIENT_SECRET_EMAIL=             # Google client secret for email
+GOOGLE_REDIRECT_URI_EMAIL=http://localhost:3000/api/mailboxes/gmail/callback  # Google redirect URI for email
+
+# Following environment variables are used for pubsub.
+# They are used to get the webhook google to track replies from the email.
+# They are not required for the MailOps API to work.
 
 # PubSub
-GOOGLE_CLOUD_PROJECT=radiant-clone-447816-m7
-PUBSUB_SUBSCRIPTION_NAME=coldjot-subscription
-PUBSUB_TOPIC_NAME=coldjot-gmail-notification
-PUBSUB_AUDIENCE=https://cobra-electric-thoroughly.ngrok-free.app/api/pubsub
+GOOGLE_CLOUD_PROJECT=                    # Google Cloud Project ID
+PUBSUB_SUBSCRIPTION_NAME=                # PubSub subscription name
+PUBSUB_TOPIC_NAME=                       # PubSub topic name
+PUBSUB_AUDIENCE=                         # PubSub audience URL where the webhook will be sent    
 
 # Google Service Account
-GOOGLE_SERVICE_ACCOUNT_EMAIL=
-GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=
+GOOGLE_SERVICE_ACCOUNT_EMAIL=            # Google service account email for PubSub
+GOOGLE_SERVICE_ACCOUNT_PRIVATE_KEY=      # Google service account private key for PubSub
