--- a/apps/mailops/turbo.json
+++ b/apps/mailops/turbo.json
@@ -27,7 +27,8 @@
                 "REDIS_*",
                 "GOOGLE_*",
                 "QUEUE_PREFIX",
-                "PUBSUB_*"
+                "PUBSUB_*",
+                "BYPASS_BUSINESS_HOURS"
             ],
             "outputs": [
                 "dist/**"
