--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -1,31 +1,37 @@
 # General
-LOG_LEVEL=debug
-APP_ENV=development
-NODE_ENV=development
-NEXT_PUBLIC_APP_ENV=development
-AUTH_TRUST_HOST=true
+LOG_LEVEL=debug                                         # Log level
+APP_ENV=development                                     # App environment
+NODE_ENV=development                                    # Node environment
+NEXT_PUBLIC_APP_ENV=development                         # Next public app environment
 
 # Urls
-NEXTAUTH_URL=http://localhost:3000
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_MAILOPS_API_URL="http://localhost:3001/api"
+NEXTAUTH_URL=http://localhost:3000                      # Next auth url
+NEXT_PUBLIC_APP_URL=http://localhost:3000               # Next public app url
+NEXT_PUBLIC_MAILOPS_API_URL="http://localhost:3001/api" # Next public mailops api url
 
 # Secrets
-NEXTAUTH_SECRET=
-APOLLO_API_KEY=
-ENCRYPTION_KEY=
+NEXTAUTH_SECRET=                                        # Next auth secret
+ENCRYPTION_KEY=                                         # Encryption key
+AUTH_TRUST_HOST=                                        # Auth trust host
 
 # Database
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
+DATABASE_URL=                                           # PostgreSQL connection string
 
 # Google OAuth2
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=
+GOOGLE_CLIENT_ID=                                       # Google client id
+GOOGLE_CLIENT_SECRET=                                   # Google client secret
+GOOGLE_REDIRECT_URI=http://localhost:3001/api/auth/callback/google  # Google redirect uri
 
 # Google Mailbox OAuth2
-GOOGLE_CLIENT_ID_EMAIL=
-GOOGLE_CLIENT_SECRET_EMAIL=
-GOOGLE_REDIRECT_URI_EMAIL=
+GOOGLE_CLIENT_ID_EMAIL=                                 # Google client id for email
+GOOGLE_CLIENT_SECRET_EMAIL=                             # Google client secret for email
+GOOGLE_REDIRECT_URI_EMAIL=http://localhost:3000/api/mailboxes/gmail/callback  # Google redirect uri for email
 
-DEEPSEEK_API_KEY_DEV=
+# -----------------------------------------------------------------
+# -----------------------------------------------------------------
+# Features under development
+# -----------------------------------------------------------------
+# -----------------------------------------------------------------
+
+# Deepseek API Key
+DEEPSEEK_API_KEY_DEV=                                    # Deepseek api key for development
