--- a/apps/mailops/env/.env.example
+++ b/apps/mailops/env/.env.example
@@ -11,7 +11,7 @@ MAILOPS_API_URL=http://localhost:3001   # URL for the mailops api
 TRACK_API_URL=https://coldjot.loca.lt   # URL for the tracking in the email
 
 # Database
-DATABASE_URL=                           # Database URL
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev  # PostgreSQL connection string
 
 # Redis
 REDIS_HOST=localhost                    # Redis host
