--- a/packages/database/env/.env.example
+++ b/packages/database/env/.env.example
@@ -8,4 +8,4 @@ LOG_LEVEL=info         # Options: debug, info, warn, error
                        # error - Only errors
 
 # Database
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev  # PostgreSQL connection string
