--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -15,7 +15,7 @@ ENCRYPTION_KEY=                                         # Encryption key
 AUTH_TRUST_HOST=                                        # Auth trust host
 
 # Database
-DATABASE_URL=                                           # PostgreSQL connection string
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev  # PostgreSQL connection string
 
 # Google OAuth2
 GOOGLE_CLIENT_ID=                                       # Google client id
